Page container alignment fix

--- a/src/application/footer/footer.scss
+++ b/src/application/footer/footer.scss
@@ -2,9 +2,10 @@ footer.footer-component {
     position: relative;
     display: flex;
 
+    margin-top: auto;
     padding: 40px;
-    align-items: center;
 
+    align-items: center;
     flex-direction: row;
 
     color: #EEE;
